--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.5",
-    "tiny-slider": "^2.9.4"
+    "tiny-slider": "^2.9.4",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
