--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
+    "aos": "^2.3.4",
     "bootstrap-icons": "^1.11.2",
     "next": "14.0.3",
     "react": "^18",
@@ -19,6 +20,7 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
